@@ -125,20 +125,14 @@ AC_SUBST([package_revision])
 
 dnl These are bootstrap requirements! Once built, libtool may work with
 dnl much older releases of autoconf and automake.  See release notes.
-AM_INIT_AUTOMAKE([1.10.1 gnu subdir-objects dist-lzma])
+dnl 1.11 is needed for color-tests, 1.11.1 fixes a security issue.
+AM_INIT_AUTOMAKE([1.11.1 gnu subdir-objects dist-lzma color-tests])
 
 dnl We use m4sh to generate libtool's portable shell scripts
 AC_SUBST([M4SH], ['$(AUTOM4TE) --language=m4sh'])
 
 dnl Make sure config.status is regenerated when the version timestamp changes
 AC_SUBST([CONFIG_STATUS_DEPENDENCIES], ['$(top_srcdir)/ChangeLog'])
-
-dnl when installed libtool is used with automake-1.9.x or autoconf-2.59,
-dnl subdir libobjs don't work without a little extra help
-AC_MSG_CHECKING([whether subdir libobjs are useable])
-test -f $srcdir/argz.c || sublibobjs_supported=yes
-AM_CONDITIONAL([LTDL_SUBDIR_LIBOBJS], test x"${sublibobjs_supported-no}" != xno)
-AC_MSG_RESULT([${sublibobjs_supported-no}])
 
 
 ## ------------------------------- ##
